{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 6,
  "lineage": "7d5e313b-6272-0160-2260-91e29a3bbfe4",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1614278eceae9e6",
            "arn": "arn:aws:ec2:ap-southeast-1:780910303191:elastic-ip/eipalloc-0e1614278eceae9e6",
            "association_id": "eipassoc-0bbe9aa6a9fa24af0",
            "domain": "vpc",
            "id": "eipalloc-0e1614278eceae9e6",
            "instance": "i-003092a2e3fe7d95a",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c78461d77eb17642",
            "private_dns": "ip-172-31-6-105.ap-southeast-1.compute.internal",
            "private_ip": "172.31.6.105",
            "public_dns": "ec2-18-141-33-29.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.33.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.compute.aws_instance.demo-instance",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4b5d31e60aa0acd",
            "arn": "arn:aws:ec2:ap-southeast-1:780910303191:instance/i-003092a2e3fe7d95a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003092a2e3fe7d95a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udemy-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c78461d77eb17642",
            "private_dns": "ip-172-31-6-105.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.105",
            "public_dns": "ec2-13-214-201-64.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.201.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4749b602ee3f3e3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "public_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03eb2ff082eddf439",
            "tags": {
              "Name": "Udemy Demo"
            },
            "tags_all": {
              "Name": "Udemy Demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc91822853fa423"
            ]
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:780910303191:security-group/sg-0a41608997f2c2fcd",
            "description": "private_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a41608997f2c2fcd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07bc91822853fa423"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07bc91822853fa423"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "780910303191",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04bed5fd6bf25a2fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:780910303191:security-group/sg-07bc91822853fa423",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bc91822853fa423",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "780910303191",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04bed5fd6bf25a2fb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}